Fix create user_rating view bug